k8s/addons/elk/logstash.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash
  namespace: elk
spec:
  selector:
    matchLabels:
      app: logstash
  template:
    metadata:
      labels:
        app: logstash
    spec:
      containers:
        # - image: docker.elastic.co/logstash/logstash:5.5.0
        - image: opensearchproject/logstash-oss-with-opensearch-output-plugin:latest
          name: logstash
          ports:
            - name: logstash
              containerPort: 5044
          volumeMounts:
            - name: config
              mountPath: /usr/share/logstash/config/logstash.yml
              subPath: logstash.yml
            - name: pipeline
              mountPath: /usr/share/logstash/pipeline/logstash.conf
              subPath: logstash.conf
          resources:
            limits:
              memory: 1Gi
              cpu: 500m
            requests:
              memory: 1Gi
              cpu: 500m
          # env:
          #   - name: LS_JAVA_OPTS
          #     value: "-Xms512m -Xmx512m"
      volumes:
        - name: pipeline
          configMap:
            name: logstash
            items:
              - key: logstash.conf
                path: logstash.conf
        - name: config
          configMap:
            name: logstash
            items:
              - key: logstash.yml
                path: logstash.yml
---
apiVersion: v1
kind: Service
metadata:
  name: logstash
  namespace: elk
  labels:
    app: logstash
spec:
  selector:
    app: logstash
  ports:
    - name: logstash
      port: 5044
      targetPort: 5044
